// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewBtn default 1`] = `
<div>
  <a
    class="ant-btn ant-btn-primary"
    href="foo"
  >
    <span>
      bar
    </span>
  </a>
</div>
`;

exports[`NewBtn text 1`] = `
<div>
  <a
    class="ant-btn ant-btn-primary"
    data-testid="foo"
    href="foo"
  >
    <span>
      bar
    </span>
  </a>
</div>
`;
